@@ -1,3 +1,7 @@
+  09 Dec 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  likwid-3.0.0.ebuild, metadata.xml:
+  sys-apps/likwid: added suid option
+
 *likwid-3.0.0 (05 Dec 2013)
 
   05 Dec 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
